--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="INSERT STYLESHEET HERE">
     </head>
     <body>
+        <h1>This is the login page</h1>
         <form action="/users/login" method="POST">
             <label for="username">Username:</label>
             <input type="text" name="username" required>
@@ -16,6 +17,7 @@
             <input type="password" name="password">
             <button type="submit">Login</button>
         </form>
+        <a href="/users/new"><button>Create a new user!</button></a>
         <script src="" async defer></script>
     </body>
 </html>
