delete user function working

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -13,6 +13,8 @@
             <form action="/users/new" method="POST">
                 <label for="username">Username:</label>
                 <input type="text" name="username" required>
+                <label for="name">Name:</label>
+                <input type="text" name="name">
                 <label for="password">Password:</label>
                 <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
                 <input type="password" name="password" minlegnth=8 required> 
