--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -11,9 +11,12 @@
     <body>
         <h1>This is the form to edit a user</h1>
         <form action="/users/<%=user._id%>?_method=PUT" method="POST">
-            <label for="password">Password:</label>
+            <label for="name">Name:</label>
+            <input type="text" name="name">
+            <!-- PASSWORD UPDATING NEEDS WORK -->
+            <!-- <label for="password">Password:</label> -->
             <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
-            <input type="password" name="password" minlegnth=8 required> 
+            <!-- <input type="password" name="password" minlegnth=8 required>  -->
             <label for="departureCity">Departure City:</label>
             <input type="text" name="departureCity">
             <label for="departureDate">Departure Date:</label>
@@ -21,6 +24,9 @@
             <label for="returnDate">Return Date:</label>
             <input type="date" name="returnDate">
             <input type="submit">            
+        </form>
+        <form action="/users/<%=user._id%>/?_method=DELETE" method="POST">
+            <button type="submit" class="delete-user-button">Delete this user</button>
         </form>
         <script src="" async defer></script>
     </body>
