create trip route works, trip index works, user show page shows specific trips of users, delete trip route works,

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -21,6 +21,7 @@
                 <label for="departureCity">Departure City:</label>
                 <input type="text" name="departureCity">
                 <label for="departureDate">Departure Date:</label>
+                <!-- NOTE CHECK ON DIFFERENT BROWSERS -->
                 <input type="date" name="departureDate">
                 <label for="returnDate">Return Date:</label>
                 <input type="date" name="returnDate">
