--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -12,23 +12,20 @@
         <h1>This is the user show page</h1>
         
         <!-- DISPLAYS MESSAGE IF NO TRIPS -->
-        <%if(trips.length === 0){%>
+        <%if(user.trips.length === 0){%>
             <h2>There are no trips yet</h2>
-        
         <!-- FUNCTION TO ADD TRIPS TO PAGE FOR SPECIFIC USER -->
         <%}else{%>
             <ul class="trips">
-                <%trips.forEach((trip)=>{%>
-                    <%if(trip.user == user.id){%>                        
+                <%user.trips.forEach((trip)=>{%>
                         <!-- LISTS USERS TRIPS BY CITY ONLY HREF TIED TO TRIP SHOW ROUTE -->
-                    <li><a href="/trips/<%=trip._id%>"><%=trip.destinationCity%></a></li>
-                    <%}%>
-                <%})%>
+                    <li><a href="/trips/show/<%=trip._id%>"><%=trip.destinationCity%></a></li>
+                    <%})%>
             </ul>
         <%}%>
         
         <!-- BELOW NEEDS TO LINK TO SHOW FORM TO CREATE TRIP PAGE -->
-        <a href="/trips/new"><button class="create-trip-button">Create a Trip!</button></a> 
+        <a href="/trips/new/<%=user._id%>"><button class="create-trip-button">Create a Trip!</button></a> 
         <a href="/users/<%=user._id%>/edit"><button>Edit Account</button></a>
         <a href="/users/logout"><button class="logout-button">Logout</button></a>
         <script src="" async defer></script>
