--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>This is the trips index page</h1>
+        <h1> TRENDING trips</h1>
         <% if(trips.length === 0) {%>
             <h2>There are no trips in the database!</h2>
         <% } else { %> 
