--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -9,7 +9,9 @@
     </head>
     <body>
         <h1>This is the user show page</h1>
-        
+        <nav>
+            <%-include ('../partials/nav.ejs')%>
+        </nav>
         <!-- DISPLAYS MESSAGE IF NO TRIPS -->
         <%if(user.trips.length === 0){%>
             <h2>There are no trips yet</h2>
