added nav to index page

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
     <ul class="nav">
         <li><a href="/trips">Trending Trips</a></li>
         <!-- WHERE DO WE PASS USER OBJECT TO THIS TEMPLATE??? -->
-        <li><a href="/users/<%=user._id%>">My Trips</a></li>
+        <li><a href="/users/<%=userId%>">My Trips</a></li>
         <li><a href="/users/logout">Logout</a></li>
     </ul>
 <!--END NAVIGATION-->
