--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <!--BEGIN NAVAGATION-->
     <ul class="nav">
         <li><a href="/trips">Trending Trips</a></li>
-        <!-- WHERE DO WE PASS USER OBJECT TO THIS TEMPLATE??? -->
+        <!-- ANY TEMPLATE THAT CALLS THIS NEEDS userId VARIABLE PASSED TO IT (SEE TRIPS INDEX ROUTE) -->
         <li><a href="/users/<%=userId%>">My Trips</a></li>
         <li><a href="/users/logout">Logout</a></li>
     </ul>
