--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <%-include ('../partials/nav.ejs')%>
+    </nav>
     <h1><%= trip.destinationCity %></h1>
     <h1><%= trip.destinationCountry %></h1>
     <%if(tripOwner === currUser){%>
