added partial heads to all ejs templates

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,6 +3,8 @@
         <li><a href="/trips">Trending Trips</a></li>
         <!-- CHECK USER ID IF PAGE FAILS TO RENDER -->
         <li><a href="/users/<%=userId%>">My Trips</a></li>
-        <li><a href="/users/logout">Logout</a></li>
-    </ul>
+        <%if(isLoggedIn){%>
+            <li><a href="/users/logout">Logout</a></li>
+        <%}%>
+        </ul>
 <!--END NAVIGATION-->
