--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="INSERT STYLESHEET HERE">
+        <%-include ('../partials/head.ejs')%>
     </head>
     <body>
         <h1>This is the form to create a new user</h1>
@@ -20,11 +15,7 @@
                 <input type="password" name="password" minlegnth=8 required> 
                 <label for="departureCity">Departure City:</label>
                 <input type="text" name="departureCity">
-                <label for="departureDate">Departure Date:</label>
                 <!-- NOTE CHECK ON DIFFERENT BROWSERS -->
-                <input type="date" name="departureDate">
-                <label for="returnDate">Return Date:</label>
-                <input type="date" name="returnDate">
                 <input type="submit">            
             </form>
         <script src="" async defer></script>
