added nav app-wide

--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -4,6 +4,9 @@
         <%-include ('../partials/head.ejs')%>
     </head>
     <body>
+        <nav>
+            <%-include ('../partials/nav.ejs')%>
+        </nav>
         <h1>This is the form to edit a trip</h1>
         <h2>The current destination city is: <%=trip.destinationCity%></h2>
         <h2>The current destination Country is: <%=trip.destinationCountry%></h2>
