deployed on heroku 		Co-authored-by: Luther Anderson <lutheranders@gmail.com> 		Co-authored-by: Steven Luu <stevenluuchs@gmail.com> 		Co-authored by: Michael Starkman <michaelstarkman@gmail.com>

--- a/views/trips/tempGoogle.ejs
+++ b/views/trips/tempGoogle.ejs
@@ -36,5 +36,5 @@
 </html>
 
 <!-- </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_API_KEY%>&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=process.env.GOOGLE_API_KEY&callback=initMap"
     async defer></script> -->
