added greeting by name to user on user show page

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -12,6 +12,7 @@
             <h2>There are no trips yet</h2>
         <!-- FUNCTION TO ADD TRIPS TO PAGE FOR SPECIFIC USER -->
         <%}else{%>
+            <h2>Hello, <%=user.name%>.</h2>
             <h2>What dates would you like to travel?</h2>
             <p>Departure Date:</p><input type="date" name="departureDate">
             <p>Return Date</p><input type="date" name="returnDate">
