--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -7,7 +7,7 @@
         <nav>
             <%-include ('../partials/nav.ejs')%>
         </nav>
-        <h1>User Trips</h1>
+        <h1>Trips created by users</h1>
         <%if(trips.length === 0){%>
             <h2>There are no trips in the database!</h2>
         <%}else{%>
