--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,7 @@
 <!--BEGIN NAVAGATION-->
     <%if(isLoggedIn){%>
         <ul class="nav">
-            
-            <li><a href="/trips">Trending Trips</a></li>
+            <li><a href="/trips">Trips</a></li>
             <!-- CHECK USER ID IF PAGE FAILS TO RENDER -->
             <li><a href="/users/<%=userId%>">My Trips</a></li>
             <li><a href="/users/logout">Logout</a></li>
