--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -2,6 +2,9 @@
 <html>
     <head>
         <%-include ('../partials/head.ejs')%>
+        <script>
+            google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
     </head>
     <body>
         <nav>
@@ -10,12 +13,9 @@
         <h1>This is the form to edit a trip</h1>
         <h2>The current destination city is: <%=trip.destinationCity%></h2>
         <h2>The current destination Country is: <%=trip.destinationCountry%></h2>
-        
         <form action="/trips/<%=trip._id%>?_method=PUT" method="POST">
-            <label for="destinationCity">Destination City:</label>
-            <input type="text" name="destinationCity" required>
-            <label for="destinationCountry">Destination Country:</label>
-            <input type="text" name="destinationCountry" required>           
+            <label for="destinationCity">Destination:</label>
+            <input id="searchTextField" type="text" size="50" placeholder="Enter a location" autocomplete="on" runat="server" /> 
             <input type="submit">
         </form>
         <script src="" async defer></script>
