--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -23,7 +23,36 @@
                     <li><a href="/trips/<%=trip._id%>"><%=trip.destinationCity%>, <%=trip.destinationCountry%></a></li>
             <%})%>
         </ul>
+        <div id="map">
+        </div>
         <%}%>
-        <script src="" async defer></script>
+        <script>
+            async function initMap() {
+                const myLatLng = { lat: -25.363, lng: 131.044 };
+                const map = await new google.maps.Map(document.getElementById("map"), {
+                        zoom: 1,
+                        center: myLatLng,
+                    });
+            
+                    new google.maps.Marker({
+                        position: myLatLng,
+                                    map,
+                        title: "Hello World!",
+                    });
+                    }
+            initMap();
+        </script>
+
+    <!--  <iframe
+    //     width="600"
+    //     height="450"
+    //     style="border:0"
+    //     loading="lazy"
+    //     allowfullscreen
+    //     src="https://www.google.com/maps/embed/v1/place?key=<%=process.env.GOOGLE_API_KEY%>&q=atlantic+ocean"
+    //     markers: null>
+    //   </iframe>  -->
+
+
     </body>
 </html>
