--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -8,13 +8,15 @@
             <%-include ('../partials/nav.ejs')%>
         </nav>
         <h1>This is the form to create a new trip</h1>
+        <script>
+            google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
         <form action="/trips/new/<%=user._id%>" method="POST">
-            <label for="destinationCity">Destination City:</label>
-            <input type="text" name="destinationCity" required>
-            <label for="destinationCountry">Destination Country:</label>
-            <input type="text" name="destinationCountry">  
-            <button type="submit">Create Trip</button>        
+            <input id="searchTextField" type="text" size="50" placeholder="Enter a location" autocomplete="on" runat="server" />  
+            <!-- <input type="hidden" id="city2" name="destinationCity" />  -->
+            <!-- <input type="hidden" id="cityLat" name="cityLat" />
+            <input type="hidden" id="cityLng" name="cityLng" /> -->
+            <button type="submit">Create Trip</button> 
         </form>
-        <script src="" async defer></script>
     </body>
 </html>
