--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -18,9 +18,6 @@
         <h6>Trip created by: <%=tripOwnerName%></h6>
     <%}%>
 </body>
-
-
-    
     <script>
         //reads h1 which is destionationCity and saves address now just need fuction to run with clicking "pin" button
         var geocoder = new google.maps.Geocoder();
@@ -50,9 +47,7 @@
             }
             });
         }
-
     </script>
-
 <body onload="drawMap()">
 <script>
     async function drawMap(){
@@ -62,7 +57,15 @@
       }catch{setTimeout(codeAddress, 50)}
     }
 </script>
-
+<script>
+    async function findRestaurants(){
+       let restaurants = await fetch('https://jsonplaceholder.typicode.com/users')
+        console.log(restaurants)
+    }
+findRestaurants();
+</script>
+    <div id="restuarants">
+    </div>
     <div id="map" style="width: 320px; height: 480px;"></div>
      <div>
        <!-- <input type="button" value="Show on Map" onclick="codeAddress()"> -->
