--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -12,7 +12,7 @@
                 <input type="text" name="name">
                 <label for="password">Password:</label>
                 <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
-                <input type="password" name="password" minlegnth=8 required> 
+                <input type="password" pattern=".{8,12}" required title="Password must be 8-12 characters" name="password" required> 
                 <label for="departureCity">Departure City:</label>
                 <input type="text" name="departureCity">
                 <!-- NOTE CHECK ON DIFFERENT BROWSERS -->
