--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,91 @@
 <!--BEGIN NAVAGATION-->
-    <%if(isLoggedIn){%>
-        <ul class="nav">
-            <li><a href="/trips">Trips</a></li>
-            <!-- CHECK USER ID IF PAGE FAILS TO RENDER -->
-            <li><a href="/users/<%=userId%>">My Trips</a></li>
-            <li><a href="/users/logout">Logout</a></li>
-            <li><a href="/users/<%=userId%>/edit">Account</a></li>
+<%-include ('../partials/head.ejs')%>
+
+<!-- <%if(isLoggedIn){%> -->
+    <!-- START EXPERIMENTAL -->
+    <!-- <nav>
+        <img class="menu-image" src="../../public/assets/img/menu-outline.svg">
+        <ul class="side-nav">
+            <img src="../../public/assets/img/x.svg" class="x">
+            <div class="nav-content">
+                <li><a href="/trips">All Trips</a></li>
+                <li><a href="/users/<%=userId%>">My Trips</a></li>
+                <li><a href="/users/<%=userId%>/edit">Account</a></li>
+                <li><a href="/users/logout">Logout</a></li>
+            </div>
         </ul>
-    <%}else{%>
-       <ul class="nav"> 
-            <li><a href="/users">Login</a>
-            <a href="/users/new">Create a new user</a>    
-    <%}%>
+    </nav>
+<%}else{%> 
+    <nav>
+        <img class="menu-image" src="../../public/assets/img/menu-outline.svg">
+        <ul class="side-nav">
+            <img src="../../public/assets/img/x.svg" class="x">
+            <div class="nav-content">
+                <li><a href="/users">Login</a></li>
+                <li><a href="/users/<%=userId%>">Create Account</a></li>
+            </div>
+        </ul>
+    </nav>
+<%}%> -->
+    
+     <!-------------------------------------------->
+     <%if(isLoggedIn){%>
+        <!-- Navbar -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+            <div class="container">
+    
+    
+                <!-- Collapse -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <!-- Links -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    
+                    <!-- Left -->
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link waves-effect" href="/trips">Trips
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/users/<%=userId%>" >My Trips</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/users/logout" >Logout</a>
+                        </li>
+                        <li class="nav-item"> 
+                            <a class="nav-link waves-effect" href="/users/<%=userId%>/edit"  >Account</a>
+                        </li>
+                    </ul>
+                    <%}else{%>   
+                    <!-- Navbar -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+            <div class="container">
+    
+                <!-- Links -->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <!-- <a class="nav-link waves-effect" href="#">Home -->
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                        <li class="nav-item"><a class="nav-link waves-effect" href="/users" >Login</a>
+                        <li class="nav-item"><a class="nav-link waves-effect" href="/users/new" >Create a new user</a></li>
+                        </ul>
+                        <%}%>
+    
+                    
+    
+                </div>
+    
+            </div>
+        </nav>
+        <!-- Navbar -->
+</header>
+    
 <!--END NAVIGATION-->
