--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -12,10 +12,10 @@
             google.maps.event.addDomListener(window, 'load', initialize);
         </script>
         <form action="/trips/new/<%=user._id%>" method="POST">
+            <label for="tripName">Name for your trip:</label>
+            <input type="text" name="tripName" placeholder="Enter a name">
+            <label for="destinationCity">Location: </label>
             <input id="searchTextField" type="text" size="50" placeholder="Enter a location" autocomplete="on" runat="server" name="destinationCity"/>  
-            <!-- <input type="hidden" id="city2" name="destinationCity" />  -->
-            <!-- <input type="hidden" id="cityLat" name="cityLat" />
-            <input type="hidden" id="cityLng" name="cityLng" /> -->
             <button type="submit">Create Trip</button> 
         </form>
     </body>
