--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -7,16 +7,41 @@
     <nav>
         <%-include ('../partials/nav.ejs')%>
     </nav>
-    <h1 id="address"><%= trip.destinationCity %></h1>
-    <h1><%= trip.destinationCountry %></h1>
-    <%if(tripOwner === currUser){%>
-        <a href="/trips/<%=trip._id%>/edit"><button class="edit-trip-button">Edit</button></a>
-        <form action="/trips/<%= trip._id %>?_method=DELETE" method="post">
-            <button type="submit">Delete <%= trip.destinationCity%>?</button>
-        </form>
+    <section class="trip-header">
+        <h1><%=trip.tripName%></h1>
+        <h2 id="address">Location: <%=trip.destinationCity%></h2>
+        <%if(tripOwner === currUser){%>
+            <form action="/trips/<%=trip._id%>/activity?_method=PUT" method="POST"> 
+                <label for="add-activity">Add an activity:</label>
+                <input type="text" placeholder="activity" name="activity">
+                <input type="submit" id="activity-submit-button">
+            </form>  
     <%}else{%>
-        <h6>Trip created by: <%=tripOwnerName%></h6>
+        <h6>Trip created by:   <%=tripOwnerName%></h6>
     <%}%>
+    </section>
+    <section class="trip-activities">
+        <h4>Planned Activities:</h4>
+        <ul class="activities">
+            <%for(let i = 0; i < trip.activities.length; i++){%>
+                <%let activity = trip.activities[i]%>
+                    <li><%=activity%></li>
+            <%}%>
+        </ul>
+    </section>
+    <section class="edit-buttons">
+        <%if(tripOwner === currUser){%>
+            <a href="/trips/<%=trip._id%>/edit"><button class="edit-trip-button">Edit</button></a>
+            <form action="/trips/<%= trip._id %>?_method=DELETE" method="POST">
+                <button type="submit">Delete <%=trip.tripName%>?</button>
+            </form>
+        <%}%>
+    </section>
+
+
+
+
+
 </body>
     <script>
         //reads h1 which is destionationCity and saves address now just need fuction to run with clicking "pin" button
@@ -30,7 +55,6 @@
             }
         map = new google.maps.Map(document.getElementById('map'), mapOptions);
         }   
-
         function codeAddress() {
             var address = document.getElementById('address').innerText;
             console.log(`addy: ${address}`)
@@ -58,11 +82,6 @@
     }
 </script>
 <script>
-    async function findRestaurants(){
-       let restaurants = await fetch('https://jsonplaceholder.typicode.com/users')
-        console.log(restaurants)
-    }
-findRestaurants();
 </script>
     <div id="restuarants">
     </div>
@@ -70,4 +89,6 @@ findRestaurants();
      <div>
        <!-- <input type="button" value="Show on Map" onclick="codeAddress()"> -->
      </div>
-   </body>
+    </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+</body>
