change to new template 		Co-authored-by: Luther Anderson <lutheranders@gmail.com> 		Co-authored by: Michael Starkman <michaelstarkman@gmail.com>

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,15 +1,21 @@
-<!--BEGIN NAVAGATION-->
-    <%if(isLoggedIn){%>
-        <ul class="nav">
-            <li><a href="/trips">Trips</a></li>
-            <!-- CHECK USER ID IF PAGE FAILS TO RENDER -->
-            <li><a href="/users/<%=userId%>">My Trips</a></li>
-            <li><a href="/users/logout">Logout</a></li>
-            <li><a href="/users/<%=userId%>/edit">Account</a></li>
-        </ul>
-    <%}else{%>
-       <ul class="nav"> 
-            <li><a href="/users">Login</a>
-            <a href="/users/new">Create a new user</a>    
-    <%}%>
+
 <!--END NAVIGATION-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container px-5">
+            <a class="navbar-brand" href="/">Rosie's Travel App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <%if(isLoggedIn){%>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/<%=userId%>">My Trips</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/<%=userId%>/edit">Account</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
+                        <%}else{%>
+                            <li class="nav-item"><a class="nav-link" href="/users">Login</a>
+                            <li class="nav-item"><a class="nav-link" href="/users/new">Create a new user</a>
+                        <%}%>
+                </ul>
+            </div>
+        </div>
+    </nav>
