--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NAME OF OUR APP GOES HERE</title>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_API_KEY%>&libraries=places"></script>
+<title>Rosie's Travel Planner</title>
+<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_API_KEY%>&libraries=places"></script> -->
 <link rel="stylesheet" href="/css/style.css">
 <script>
     function initialize() {
@@ -16,3 +16,10 @@
         });
     }
 </script>
+
+<!-- bootstrap stuff -->
+
+ <!-- Bootstrap core JS-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+ <!-- Core theme JS-->
+ <script src="js/scripts.js"></script>
