--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,12 +7,17 @@
         <h1>This is the login page</h1>
         <form action="/users/login" method="POST">
             <label for="username">Username:</label>
-            <input type="text" name="username" required>
+            <input type="text" name="username" placeholder="required" required>
             <label for="password">Password:</label>
-            <input type="password" name="password">
+            <input type="password" name="password" placeholder="required">
             <button type="submit">Login</button>
         </form>
-        <a href="/users/new"><button>Create a new user!</button></a>
+        
+    <a href="/users/new"><button>Create a new user!</button></a>
+    
+
+
+</body>
         <script src="" async defer></script>
     </body>
 </html>
