--- a/views/trips/new.ejs
+++ b/views/trips/new.ejs
@@ -12,7 +12,10 @@
             google.maps.event.addDomListener(window, 'load', initialize);
         </script>
         <form action="/trips/new/<%=user._id%>" method="POST">
-            <input id="searchTextField" type="text" size="50" placeholder="Enter a location" autocomplete="on" runat="server" name="destinationCity"/>  
+            <label for="tripName">Trip name:</label>
+            <input type="text" name="tripName" placeholder="Name this trip..." required="true">
+            <label for="destinationCity">Location: </label>
+            <input id="searchTextField" type="text" size="50" placeholder="Where you going?" autocomplete="on" runat="server" name="destinationCity"/>  
             <!-- <input type="hidden" id="city2" name="destinationCity" />  -->
             <!-- <input type="hidden" id="cityLat" name="cityLat" />
             <input type="hidden" id="cityLng" name="cityLng" /> -->
