--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -14,15 +14,11 @@
         <!-- FUNCTION TO ADD TRIPS TO PAGE FOR SPECIFIC USER -->
         <%}else{%>
             <h2>Hello, <%=user.name%>.</h2>
-            <!-- <h2>What dates would you like to travel?</h2>
-            <p>Departure Date:</p><input type="date" name="departureDate">
-            <p>Return Date</p><input type="date" name="returnDate"> -->
-            <!-- <input type="submit"> -->
             <h2>Here are your trips:</h2>
             <ul class="trips">
                 <%user.trips.forEach((trip)=>{%>
-                        <!-- LISTS USERS TRIPS BY CITY ONLY HREF TIED TO TRIP SHOW ROUTE -->
-                    <li><a href="/trips/<%=trip._id%>"><%=trip.destinationCity%></a></li>
+                    <!-- LISTS USERS TRIPS BY CITY ONLY HREF TIED TO TRIP SHOW ROUTE -->
+                    <li><a href="/trips/<%=trip._id%>"><%=trip.tripName%></a></li>
                     <%})%>
             </ul>
         <%}%>
