--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -38,7 +38,16 @@
             <input id="searchTextField" type="text" size="50" placeholder="<%=trip.destinationCity%>" autocomplete="on" runat="server" name="destinationCity"/> 
             <input type="submit">
         </form>
-        <form action="/trips/<%= trip._id %>?_method=DELETE" method="POST">
+        <h4>Activities:</h4>
+        <ul>
+            <%for(let i = 0; i < trip.activities.length; i++){%>
+                <li><%=trip.activities[i]%></li>
+            <%}%>
+        </ul>
+        <form action="/trips/<%=trip._id%>/deleteActivity?_method=PUT" method="POST">
+            <button class="delete-activity-button" type="submit">Delete Latest Activity</button>
+        </form>
+        <form action="/trips/<%= trip._id%>?_method=DELETE" method="POST">
             <button type="submit">Delete <%=trip.tripName%>?</button>
         </form>
         <div class="container">
