--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -13,8 +13,8 @@
                 <label for="password">Password:</label>
                 <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
                 <input type="password" pattern=".{8,12}" required title="Password must be 8-12 characters" name="password" required> 
-                <label for="departureCity">Departure City:</label>
-                <input type="text" name="departureCity">
+                <!-- <label for="departureCity">Departure City:</label>
+                <input type="text" name="departureCity"> -->
                 <!-- NOTE CHECK ON DIFFERENT BROWSERS -->
                 <input type="submit">            
             </form>
