added message if no activity planned/required activity field to create activity

--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -19,8 +19,12 @@
         <h6>Trip created by: <%=tripOwnerName%></h6>
     <%}%>
     <section class="trip-activities">
-        <h4>Planned Activities:</h4>
-        <ul class="activities">
+            <%if(trip.activities.length <= 0){%>
+                <h4>You have not yet planned any activities.</h4>
+            <%}else{%>
+                <h4>Your plans for</h4>
+                <ul class="activities">
+            <%}%>
             <%for(let i = 0; i < trip.activities.length; i++){%>
                 <%let activity = trip.activities[i]%>
                     <li><%=activity%></li>
