--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -20,7 +20,7 @@
     <%}%>
     <section class="trip-activities">
             <%if(trip.activities.length <= 0){%>
-                <h4>You have not yet planned any activities.</h4>
+                <h4>No activities have been planned for <%=trip.tripName%>.</h4>
             <%}else{%>
                 <h4>Your plans for <%=trip.tripName%>:</h4>
                 <ul class="activities">
